made good progress on web visualizer

--- a/web_visualizer/index.html
+++ b/web_visualizer/index.html
@@ -17,9 +17,12 @@
     </header>
     <main>
         <section id="code">
-            <section id="ip"></section>
         </section>
-        <section id="stack">jeepapolozzw</section>
+        <section id="stack"></section>
+        <section id="misc">
+            <button id="startButton" class="button">Start</button>
+            <section id="console"></section>
+        </section>
     </main>
     <script src="main.js"></script>
 </body>
