added call stack to web visualizer

--- a/web_visualizer/index.html
+++ b/web_visualizer/index.html
@@ -18,10 +18,17 @@
     <main>
         <section id="code">
         </section>
-        <section id="stack"></section>
+        <section id="stack">
+        </section>
         <section id="misc">
-            <button id="startButton" class="button">Start</button>
-            <section id="console"></section>
+            <section id="controlButtons">
+                <button id="startButton" class="button">Start</button>
+            </section>
+            <section id="console">
+                <h2>Console</h2>
+            </section>
+            <section id="callStack">
+            </section>
         </section>
     </main>
     <script src="main.js"></script>
